--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Infastructure\ExpandoObjectConverter.cs" />
+    <Compile Include="Infastructure\FlashHelpers.cs" />
     <Compile Include="Infastructure\FormsAuthTokenStore.cs" />
     <Compile Include="Controllers\HelloWorldController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
