--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -213,6 +213,7 @@
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config" />
     <Content Include="Areas\Admin\Views\Joe\About.cshtml" />
+    <Content Include="App.config" />
     <None Include="CodeTemplates\AddController\Controller.tt" />
     <None Include="CodeTemplates\AddView\CSHTML\Create.tt" />
     <None Include="CodeTemplates\AddView\CSHTML\Edit.tt" />
