exclude app.config and the transactions are working

--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -17,8 +17,12 @@
   </elmah>
   <connectionStrings>
     <add name="ApplicationConnectionString" connectionString="server=.\SQLExpress;database=Movie;integrated security=true" />
-  </connectionStrings> 
-  <appSettings file="App.config" /> 
+  </connectionStrings>
+	<appSettings file="App.config" > 
+		<add key="webpages:Version" value="1.0.0.0" />
+		<add key="ClientValidationEnabled" value="true" />
+		<add key="UnobtrusiveJavaScriptEnabled" value="true" /> 
+	</appSettings>
   <system.web>
     <customErrors mode="RemoteOnly" />
     <compilation debug="true" targetFramework="4.0">
