remove app.config

--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -18,7 +18,7 @@
   <connectionStrings>
     <add name="ApplicationConnectionString" connectionString="server=.\SQLExpress;database=Movie;integrated security=true" />
   </connectionStrings>
-	<appSettings file="App.config" > 
+	<appSettings  > 
 		<add key="webpages:Version" value="1.0.0.0" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" /> 
