added config controller

--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -97,10 +97,12 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectMVC3.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\ConfigsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ElmahController.cs" />
     <Compile Include="Areas\Admin\Controllers\JoeController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
+    <Compile Include="Infastructure\CacheHelper.cs" />
     <Compile Include="Infastructure\ExpandoObjectConverter.cs" />
     <Compile Include="Infastructure\FlashHelpers.cs">
       <SubType>Code</SubType>
@@ -116,6 +118,7 @@
     <Compile Include="Infastructure\Logging\ILogger.cs" />
     <Compile Include="Infastructure\Logging\NLogger.cs" />
     <Compile Include="Infastructure\Massive.cs" />
+    <Compile Include="Models\Config.cs" />
     <Compile Include="Models\Movies.cs" />
     <Compile Include="Models\PaymentModel.cs" />
     <Compile Include="Models\Users.cs" />
@@ -175,7 +178,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\Admin\Views\Shared\" />
     <Folder Include="Public\images\" />
   </ItemGroup>
   <ItemGroup>
@@ -214,6 +216,12 @@
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config" />
     <Content Include="Areas\Admin\Views\Joe\About.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Configs\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <None Include="CodeTemplates\AddController\Controller.tt" />
     <None Include="CodeTemplates\AddView\CSHTML\Create.tt" />
     <None Include="CodeTemplates\AddView\CSHTML\Edit.tt" />
