--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -11,6 +11,7 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <elmah>
     <security allowRemoteAccess="yes" />
@@ -18,11 +19,11 @@
   <connectionStrings>
     <add name="ApplicationConnectionString" connectionString="server=.\SQLExpress;database=Movie;integrated security=true" />
   </connectionStrings>
-	<appSettings  > 
-		<add key="webpages:Version" value="1.0.0.0" />
-		<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" /> 
-	</appSettings>
+  <appSettings>
+    <add key="webpages:Version" value="1.0.0.0" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+  </appSettings>
   <system.web>
     <customErrors mode="RemoteOnly" />
     <compilation debug="true" targetFramework="4.0">
@@ -94,7 +95,15 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
-	
-	
+  <nlog>
+    <extensions>
+      <add assembly="le_nlog" />
+    </extensions>
+    <targets>
+      <target name="logentries" type="Logentries" key="LOGENTRIES_ACCOUNT_KEY" location="LOGENTRIES_LOCATION" debug="true" layout="${date:format=ddd MMM dd} ${time:format=HH:mm:ss} ${date:format=zzz yyyy} ${logger} : ${LEVEL}, ${message}, ${exception:format=tostring}" />
+    </targets>
+    <rules>
+      <logger name="*" minLevel="Info" appendTo="logentries" />
+    </rules>
+  </nlog>
 </configuration>
