--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -8,6 +8,7 @@
   <package id="jQuery.UI.Combined" version="1.8.11" />
   <package id="jQuery.Validation" version="1.8.0" />
   <package id="jQuery.vsdoc" version="1.5.1" />
+  <package id="le_nlog" version="1.5" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Modernizr" version="1.7" />
   <package id="Ninject" version="2.2.1.4" />
