--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -100,7 +100,7 @@
       <add assembly="le_nlog" />
     </extensions>
     <targets>
-		<target name="logentries" type="Logentries" key="LOGENTRIES_ACCOUNT_KEY" location="LOGENTRIES_LOCATION" debug="true" layout="${date:format=ddd MMM dd} ${time:format=HH:mm:ss} ${date:format=zzz yyyy} ${logger} Machine:${machinename} callsite:${callsite} :${LEVEL}, ${message}, ${exception:format=tostring}" />
+		<target name="logentries" type="Logentries" key="b0b5b6a5-f926-4470-8bcc-e90440cc6abb" location="Appharbor/Default" debug="true" layout="${date:format=ddd MMM dd} ${time:format=HH:mm:ss} ${date:format=zzz yyyy} ${logger} Machine:${machinename} callsite:${callsite} :${LEVEL}, ${message}, ${exception:format=tostring}" />
     </targets>
     <rules>
       <logger name="*" minLevel="Info" appendTo="logentries" />
