--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -95,15 +95,19 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <nlog>
-    <extensions>
-      <add assembly="le_nlog" />
-    </extensions>
-    <targets>
-		<target name="logentries" type="Logentries" key="b0b5b6a5-f926-4470-8bcc-e90440cc6abb" location="Appharbor/Default" debug="true" layout="${date:format=ddd MMM dd} ${time:format=HH:mm:ss} ${date:format=zzz yyyy} ${logger} Machine:${machinename} callsite:${callsite} :${LEVEL}, ${message}, ${exception:format=tostring}" />
-    </targets>
-    <rules>
-      <logger name="*" minLevel="Info" appendTo="logentries" />
-    </rules>
-  </nlog>
+
+
+	<nlog>
+		<extensions>
+			<add assembly="Web"/>
+		</extensions>
+		<targets>
+			<target name="file" type="File" fileName="${basedir}/log.txt" />
+		</targets>
+		<rules>
+			<logger name="*" minLevel="Trace" writeTo="file" />
+		</rules>
+	</nlog>
+
+
 </configuration>
