--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -14,11 +14,22 @@
  
 		<target type="Database" name="databaseLog" connectionstring="server=.\SQLExpress;database=Movie;integrated security=true">
 			<commandText>
-				INSERT INTO [Log] ([Description] ,[Summary] ,[Level] ) VALUES (@Description, @Summary, @Level )
+				INSERT INTO [Log] ([Description] ,[Summary] ,[Level] ,[Logger] ,[Status] ,[IpAddress] ,[Browser] ,[Server] ,[Session] ,[UserName] ,[Application] ,[Type] ,[Tag] )
+				VALUES (@Description, @Summary, @Level, @Logger , @Status, @IpAddress, @Browser, @Server, @Session, @UserName, @Application, @Type, @Tag)
 			</commandText>
 			<parameter name="@Description" layout="${message}"/>
 			<parameter name="@Summary" layout="${message}"/>
 			<parameter name="@Level" layout="${level}"/>
+			<parameter name="@Logger" layout="${level}"/>
+			<parameter name="@Status" layout="${level}"/>
+			<parameter name="@IpAddress" layout="${level}"/>
+			<parameter name="@Browser" layout="${level}"/>
+			<parameter name="@Server" layout="${level}"/>
+			<parameter name="@Session" layout="${level}"/>
+			<parameter name="@UserName" layout="${level}"/>
+			<parameter name="@Application" layout="${level}"/>
+			<parameter name="@Type" layout="${level}"/>
+			<parameter name="@Tag" layout="${level}"/>
 		</target>
 		
 		
