added advanced logging

--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -2,37 +2,44 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  throwExceptions="true"   >
 
+	<extensions>
+		<add assembly="NLog.Extended" />
+	</extensions>
 	<!-- 
   See http://nlog-project.org/wiki/Configuration_file 
   for information on customizing logging rules and outputs.
    -->
 	<targets>
-		<!-- add your targets here -->
+		
 
 		<target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-				layout="${longdate} ${uppercase:${level}} ${message}" />
+				layout="${longdate} ${uppercase:${level}} ${message}  " />
  
-		<target type="Database" name="databaseLog" connectionstring="server=.\SQLExpress;database=Movie;integrated security=true">
+		<target type="Database" name="databaseLog" 
+				connectionstring="server=.\SQLExpress;database=Movie;integrated security=true">
 			<commandText>
-				INSERT INTO [Log] ([Description] ,[Summary] ,[Level] ,[Logger] ,[Status] ,[IpAddress] ,[Browser] ,[Server] ,[Session] ,[UserName] ,[Application] ,[Type] ,[Tag] )
-				VALUES (@Description, @Summary, @Level, @Logger , @Status, @IpAddress, @Browser, @Server, @Session, @UserName, @Application, @Type, @Tag)
+				INSERT INTO [Log] ([Description] ,[Summary] ,[Level] ,[Logger] ,[Status] ,[IpAddress] ,[Browser] ,[Server] ,[Session] ,[UserName] ,[Application] ,[Type] ,[Tag], [Layout] )
+				VALUES (@Description, @Summary, @Level, @Logger , @Status, @IpAddress, @Browser, @Server, @Session, @UserName, @Application, @Type, @Tag, @Layout)
 			</commandText>
 			<parameter name="@Description" layout="${message}"/>
 			<parameter name="@Summary" layout="${message}"/>
 			<parameter name="@Level" layout="${level}"/>
 			<parameter name="@Logger" layout="${level}"/>
 			<parameter name="@Status" layout="${level}"/>
-			<parameter name="@IpAddress" layout="${level}"/>
-			<parameter name="@Browser" layout="${level}"/>
-			<parameter name="@Server" layout="${level}"/>
-			<parameter name="@Session" layout="${level}"/>
+			<parameter name="@IpAddress" layout="${aspnet-request:serverVariable=remote_addr}"/>
+			<parameter name="@Browser" layout="${aspnet-request:serverVariable=remote_addrHTTP_USER_AGENT}"/>
+			<parameter name="@Server" layout="${aspnet-request:serverVariable=SERVER_NAME}"/>
+			<parameter name="@Session" layout="${aspnet-sessionid}"/>
 			<parameter name="@UserName" layout="${level}"/>
 			<parameter name="@Application" layout="${level}"/>
 			<parameter name="@Type" layout="${level}"/>
 			<parameter name="@Tag" layout="${level}"/>
+			<parameter name="@Layout" layout="HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
 		</target>
-		
-		
+
+<!--
+		<parameter name="@IpAddress" layout=" ${aspnet-request:serverVariable=REMOTE_HOST}"/>
+		-->
 
 	</targets>
 
