--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -15,5 +15,6 @@
   <package id="Ninject.MVC3" version="2.2.2.0" />
   <package id="NLog" version="2.0.0.2000" />
   <package id="NLog.Config" version="2.0.0.2000" />
+  <package id="NLog.Extended" version="2.0.0.2000" />
   <package id="WebActivator" version="1.4.4" />
 </packages>
