about to fix the get on configs

--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -13,7 +13,7 @@
 		
 
 		<target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-				layout="${longdate} ${uppercase:${level}} ${message}  " />
+				layout="${longdate} ${uppercase:${level}} ${message:shortName=true}  " />
  
 		<target type="Database" name="databaseLog" 
 				connectionstring="server=.\SQLExpress;database=Movie;integrated security=true">
@@ -24,8 +24,8 @@
 			<parameter name="@Description" layout="${message}"/>
 			<parameter name="@Summary" layout="${message}"/>
 			<parameter name="@Level" layout="${level}"/>
-			<parameter name="@Logger" layout="${level}"/>
-			<parameter name="@Status" layout="${level}"/>
+			<parameter name="@Logger" layout=" "/>
+			<parameter name="@Status" layout=" "/>
 			<parameter name="@IpAddress" layout="${aspnet-request:serverVariable=remote_addr}"/>
 			<parameter name="@Browser" layout="${aspnet-request:serverVariable=remote_addrHTTP_USER_AGENT}"/>
 			<parameter name="@Server" layout="${aspnet-request:serverVariable=SERVER_NAME}"/>
@@ -38,6 +38,7 @@
 		</target>
 
 <!--
+|machine:${machine}|processid:${processid}|processname:${processname}
 		<parameter name="@IpAddress" layout=" ${aspnet-request:serverVariable=REMOTE_HOST}"/>
 		-->
 
