--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -12,13 +12,13 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
+    <section name="glimpse" type="Glimpse.Core.Configuration.GlimpseConfiguration" />
   </configSections>
   <elmah>
     <security allowRemoteAccess="yes" />
   </elmah>
   <connectionStrings>
-    <add name="ApplicationConnectionString" 
-				providerName="System.Data.SqlClient" connectionString="server=.\SQLExpress;database=Movie;integrated security=true" />
+    <add name="ApplicationConnectionString" providerName="System.Data.SqlClient" connectionString="server=.\SQLExpress;database=Movie;integrated security=true" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
@@ -72,10 +72,13 @@
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+      <add name="Glimpse" type="Glimpse.Core.Module" />
     </httpModules>
     <httpHandlers>
       <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
+      <add path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler" />
     </httpHandlers>
+    <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -83,9 +86,11 @@
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+      <add name="Glimpse" type="Glimpse.Core.Module,Glimpse.Core" preCondition="integratedMode" />
     </modules>
     <handlers>
       <add name="Elmah" path="elmah.axd" verb="POST,GET,HEAD" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
+      <add name="Glimpse" path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler,Glimpse.Core" preCondition="integratedMode" />
     </handlers>
   </system.webServer>
   <runtime>
@@ -98,5 +103,42 @@
   </runtime>
 
 
-
+	<glimpse enabled="true"
+		requestLimit="5"
+		loggingEnabled="false"
+		ipForwardingEnabled="false"
+		cacheEnabled="true">
+		<!-- 
+		set enabled to false to completely turn off Glimpse. 
+		requestLimit specifies the max number of requests Glimpse will save. 
+		enableLogging (false by default) if you experience problems with Glimpse 
+		ipForwardingEnabled (false by default) will force Glimpse to validate IP addresses based on the value in the HTTP_X_FORWARDED_FOR header. Useful if your server is behind a proxy or load balancer.
+		cacheEnabled (true by default) Glimpse will tell browsers to cache static files by default
+	-->
+		<ipAddresses>
+			<!-- List of IP addresses allowed to get Glimpse data. Optional. localhost (IPv4 & IPv6) by default -->
+			<add address="127.0.0.1" />
+			<add address="::1" />
+		</ipAddresses>
+		<contentTypes>
+			<!-- List of content types Glimpse will provide data for. Optional  text/html and application/json by default -->
+			<add contentType="text/html"/>
+		</contentTypes>
+		<pluginBlacklist>
+			<!-- List of plugins for Glimpse to ignore. Optional. By default all plugins will load -->
+			<add plugin="Glimpse.Core.Plugin.Request"/>
+			<add plugin="Glimpse.Core.Plugin.MetaData"/>
+		</pluginBlacklist>
+		<environments>
+			<!-- List of environments your application runs in. Used for the new environment switcher feature. Optional. By default environment information will no be shown -->
+			<add name="Dev" authority="localhost:33333" />
+			<add name="Prod" authority="getglimpse.com" />
+		</environments>
+		<urlBlacklist>
+			<!-- Glimpse will ignore all requests made to URI's that match any regular expression in this list. Optional. By default all URI's will be considered for Glimpse inspection. -->
+			<add url="{regex}"/>
+			<add url="{regex}"/>
+		</urlBlacklist>
+	</glimpse>
+	
 </configuration>
