query the dynamic object

--- a/Source/Web/Web.csproj
+++ b/Source/Web/Web.csproj
@@ -173,7 +173,9 @@
     <Content Include="Public\javascripts\jquery-ui-1.8.11.min.js" />
     <Content Include="Public\javascripts\jquery.validate.min.js" />
     <Content Include="Public\javascripts\modernizr-1.7.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
