--- a/Source/packages/repositories.config
+++ b/Source/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\Console\packages.config" />
   <repository path="..\MvcMovie\packages.config" />
+  <repository path="..\Test\packages.config" />
   <repository path="..\Web\packages.config" />
 </repositories>
