--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -26,6 +26,25 @@
 			<parameter name="@Level" layout="${level}"/>
 			<parameter name="@Logger" layout=" "/>
 			<parameter name="@Status" layout=" "/>
+			<parameter name="@IpAddress" layout=" "/>
+			<parameter name="@Browser" layout=" "/>
+			<parameter name="@Server" layout=" "/>
+			<parameter name="@Session" layout=" "/>
+			<parameter name="@UserName" layout="${level}"/>
+			<parameter name="@Application" layout="${level}"/>
+			<parameter name="@Type" layout="${level}"/>
+			<parameter name="@Tag" layout="${level}"/>
+			<parameter name="@Layout" layout="  "/>
+		</target>
+
+<!--
+
+
+			<parameter name="@Description" layout="${message}"/>
+			<parameter name="@Summary" layout="${message}"/>
+			<parameter name="@Level" layout="${level}"/>
+			<parameter name="@Logger" layout=" "/>
+			<parameter name="@Status" layout=" "/>
 			<parameter name="@IpAddress" layout="${aspnet-request:serverVariable=remote_addr}"/>
 			<parameter name="@Browser" layout="${aspnet-request:serverVariable=remote_addrHTTP_USER_AGENT}"/>
 			<parameter name="@Server" layout="${aspnet-request:serverVariable=SERVER_NAME}"/>
@@ -35,11 +54,8 @@
 			<parameter name="@Type" layout="${level}"/>
 			<parameter name="@Tag" layout="${level}"/>
 			<parameter name="@Layout" layout="HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
-		</target>
 
-<!--
-|machine:${machine}|processid:${processid}|processname:${processname}
-		<parameter name="@IpAddress" layout=" ${aspnet-request:serverVariable=REMOTE_HOST}"/>
+
 		-->
 
 	</targets>
