--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -16,7 +16,7 @@
 				layout="${longdate} ${uppercase:${level}} ${message:shortName=true}  " />
  
 		<target type="Database" name="databaseLog" 
-				connectionstring="server=.\SQLExpress;database=Movie;integrated security=true">
+				 ConnectionStringName="ApplicationConnectionString">
 			<commandText>
 				INSERT INTO [Log] ([Description] ,[Summary] ,[Level] ,[Logger] ,[Status] ,[IpAddress] ,[Browser] ,[Server] ,[Session] ,[UserName] ,[Application] ,[Type] ,[Tag], [Layout] )
 				VALUES (@Description, @Summary, @Level, @Logger , @Status, @IpAddress, @Browser, @Server, @Session, @UserName, @Application, @Type, @Tag, @Layout)
