--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -21,27 +21,9 @@
 				INSERT INTO [Log] ([Description] ,[Summary] ,[Level] ,[Logger] ,[Status] ,[IpAddress] ,[Browser] ,[Server] ,[Session] ,[UserName] ,[Application] ,[Type] ,[Tag], [Layout] )
 				VALUES            (@Description,  @Summary,  @Level,  @Logger , @Status,  @IpAddress,  @Browser,  @Server,  @Session,  @UserName,  @Application,  @Type,  @Tag,  @Layout)
 			</commandText>
-			<parameter name="@Description" layout="${message}"/>
-			<parameter name="@Summary" layout="${message}"/>
-			<parameter name="@Level" layout="${level}"/>
-			<parameter name="@Logger" layout=" "/>
-			<parameter name="@Status" layout=" "/>
-			<parameter name="@IpAddress" layout=" "/>
-			<parameter name="@Browser" layout=" "/>
-			<parameter name="@Server" layout=" "/>
-			<parameter name="@Session" layout=" "/>
-			<parameter name="@UserName" layout="${level}"/>
-			<parameter name="@Application" layout="${level}"/>
-			<parameter name="@Type" layout="${level}"/>
-			<parameter name="@Tag" layout="${level}"/>
-			<parameter name="@Layout" layout="  "/>
-		</target>
-
-<!--
-
 
 			<parameter name="@Description" layout="${message}"/>
-			<parameter name="@Summary" layout="${message}"/>
+			<parameter name="@Summary" layout=" "/>
 			<parameter name="@Level" layout="${level}"/>
 			<parameter name="@Logger" layout=" "/>
 			<parameter name="@Status" layout=" "/>
@@ -54,6 +36,11 @@
 			<parameter name="@Type" layout="${level}"/>
 			<parameter name="@Tag" layout="${level}"/>
 			<parameter name="@Layout" layout="HTTP_HOST:${aspnet-request:serverVariable=HTTP_HOST}|callsite:${callsite}|exception${exception:format=Message,StackTrace}|stacktrace:${stacktrace}  "/>
+
+		</target>
+
+<!--
+
 
 
 		-->
