--- a/Source/Web/NLog.config
+++ b/Source/Web/NLog.config
@@ -18,12 +18,12 @@
 		<target type="Database" name="databaseLog" 
 				 ConnectionStringName="ApplicationConnectionString">
 			<commandText>
-				INSERT INTO [Log] ([Description] ,[Summary] ,[Level] ,[Logger] ,[Status] ,[IpAddress] ,[Browser] ,[Server] ,[Session] ,[UserName] ,[Application] ,[Type] ,[Tag], [Layout] )
-				VALUES            (@Description,  @Summary,  @Level,  @Logger , @Status,  @IpAddress,  @Browser,  @Server,  @Session,  @UserName,  @Application,  @Type,  @Tag,  @Layout)
+				INSERT INTO [Log] ([Description], [Summary], 				[Level], [Logger] ,[Status], [IpAddress], [Browser], [Server], [Session], [UserName], [Application], [Type], [Tag], [Layout] )
+				VALUES            (@Description,  SUBSTRING(@Summary, 1, 100),  @Level,  @Logger , @Status,  @IpAddress,  @Browser,  @Server,  @Session,  @UserName,  @Application,  @Type,  @Tag,  @Layout)
 			</commandText>
 	
 			<parameter name="@Description" layout="${message}"/>
-			<parameter name="@Summary" layout=" "/>
+			<parameter name="@Summary" layout="${message}"/>
 			<parameter name="@Level" layout="${level}"/>
 			<parameter name="@Logger" layout=" "/>
 			<parameter name="@Status" layout=" "/>
