added test sort of

--- a/Source/Database/Database.csproj
+++ b/Source/Database/Database.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\Migration\Membership.sql" />
     <Content Include="Scripts\Migration\Migration.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
