--- a/Source/Test/Test.csproj
+++ b/Source/Test/Test.csproj
@@ -60,6 +60,8 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Functionals\AccountControllerTests.cs" />
+    <Compile Include="Functionals\FakeTokenStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specs\MembershipSpecs.cs" />
     <Compile Include="Specs\MovieSpecs.cs" />
@@ -70,7 +72,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Functionals\" />
     <Folder Include="Reports\" />
   </ItemGroup>
   <ItemGroup>
