added altairis package

--- a/Source/Web/Web.config
+++ b/Source/Web/Web.config
@@ -19,6 +19,7 @@
   </elmah>
   <connectionStrings>
     <add name="ApplicationConnectionString" providerName="System.Data.SqlClient" connectionString="server=.\SQLExpress;database=Movie;integrated security=true" />
+    <add name="TableAuthDB" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLExpress;Integrated Security=True;User Instance=True;AttachDBFilename=|DataDirectory|TableAuthDB.mdf" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
@@ -39,10 +40,11 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
-    <membership>
+    <membership defaultProvider="TableMembershipProvider">
       <providers>
         <clear />
         <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+        <add name="TableMembershipProvider" type="Altairis.Web.Security.TableMembershipProvider, Altairis.Web.Security" connectionStringName="TableAuthDB" />
       </providers>
     </membership>
     <profile>
@@ -79,6 +81,11 @@
       <add path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler" />
     </httpHandlers>
     <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" />
+    <roleManager enabled="true" defaultProvider="TableRoleProvider">
+      <providers>
+        <add name="TableRoleProvider" type="Altairis.Web.Security.TableRoleProvider, Altairis.Web.Security" connectionStringName="TableAuthDB" />
+      </providers>
+    </roleManager>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -101,44 +108,37 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
-
-	<glimpse enabled="true"
-		requestLimit="5"
-		loggingEnabled="false"
-		ipForwardingEnabled="false"
-		cacheEnabled="true">
-		<!-- 
+  <glimpse enabled="true" requestLimit="5" loggingEnabled="false" ipForwardingEnabled="false" cacheEnabled="true">
+    <!-- 
 		set enabled to false to completely turn off Glimpse. 
 		requestLimit specifies the max number of requests Glimpse will save. 
 		enableLogging (false by default) if you experience problems with Glimpse 
 		ipForwardingEnabled (false by default) will force Glimpse to validate IP addresses based on the value in the HTTP_X_FORWARDED_FOR header. Useful if your server is behind a proxy or load balancer.
 		cacheEnabled (true by default) Glimpse will tell browsers to cache static files by default
 	-->
-		<ipAddresses>
-			<!-- List of IP addresses allowed to get Glimpse data. Optional. localhost (IPv4 & IPv6) by default -->
-			<add address="127.0.0.1" />
-			<add address="::1" />
-		</ipAddresses>
-		<contentTypes>
-			<!-- List of content types Glimpse will provide data for. Optional  text/html and application/json by default -->
-			<add contentType="text/html"/>
-		</contentTypes>
-		<pluginBlacklist>
-			<!-- List of plugins for Glimpse to ignore. Optional. By default all plugins will load -->
-			<add plugin="Glimpse.Core.Plugin.Request"/>
-			<add plugin="Glimpse.Core.Plugin.MetaData"/>
-		</pluginBlacklist>
-		<environments>
-			<!-- List of environments your application runs in. Used for the new environment switcher feature. Optional. By default environment information will no be shown -->
-			<add name="Dev" authority="localhost:33333" />
-			<add name="Prod" authority="getglimpse.com" />
-		</environments>
-		<urlBlacklist>
-			<!-- Glimpse will ignore all requests made to URI's that match any regular expression in this list. Optional. By default all URI's will be considered for Glimpse inspection. -->
-			<add url="{regex}"/>
-			<add url="{regex}"/>
-		</urlBlacklist>
-	</glimpse>
-	
+    <ipAddresses>
+      <!-- List of IP addresses allowed to get Glimpse data. Optional. localhost (IPv4 & IPv6) by default -->
+      <add address="127.0.0.1" />
+      <add address="::1" />
+    </ipAddresses>
+    <contentTypes>
+      <!-- List of content types Glimpse will provide data for. Optional  text/html and application/json by default -->
+      <add contentType="text/html" />
+    </contentTypes>
+    <pluginBlacklist>
+      <!-- List of plugins for Glimpse to ignore. Optional. By default all plugins will load -->
+      <add plugin="Glimpse.Core.Plugin.Request" />
+      <add plugin="Glimpse.Core.Plugin.MetaData" />
+    </pluginBlacklist>
+    <environments>
+      <!-- List of environments your application runs in. Used for the new environment switcher feature. Optional. By default environment information will no be shown -->
+      <add name="Dev" authority="localhost:33333" />
+      <add name="Prod" authority="getglimpse.com" />
+    </environments>
+    <urlBlacklist>
+      <!-- Glimpse will ignore all requests made to URI's that match any regular expression in this list. Optional. By default all URI's will be considered for Glimpse inspection. -->
+      <add url="{regex}" />
+      <add url="{regex}" />
+    </urlBlacklist>
+  </glimpse>
 </configuration>
