--- a/Source/Web/packages.config
+++ b/Source/Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Altairis.Web.Security" version="2.4.3" />
   <package id="elmah" version="1.2.0.1" />
   <package id="elmah.corelibrary" version="1.2.1" />
   <package id="Elmah.MVC" version="1.2" />
